refactor: use Stream.toList()