@@ -3,7 +3,6 @@ package com.temani.temani.features.journal.infrastructure.persistance;
 import java.util.List;
 import java.util.Optional;
 import java.util.UUID;
-import java.util.stream.Collectors;
 
 import org.springframework.stereotype.Repository;
 
@@ -41,7 +40,7 @@ public class JournalRepositoryImpl implements JournalRepository {
         List<JournalEntity> entities = jpa.findAllByUserId(userId);
         return entities.stream()
                 .map(mapper::toDomain)
-                .collect(Collectors.toList());
+                .toList();
     }
 
 }
