@@ -3,7 +3,6 @@ package com.temani.temani.features.profile.infrastructure.persistence;
 import java.util.List;
 import java.util.Optional;
 import java.util.UUID;
-import java.util.stream.Collectors;
 
 import org.springframework.stereotype.Repository;
 
@@ -55,7 +54,7 @@ public class UserRepositoryImpl implements UserRepository {
         return jpa.findAllByRoleAndKeyword(role, keyword, currentUserId)
                 .stream()
                 .map(mapper::toDomain)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
